--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </div>
 
 
-    <script type="module" src="/script/script.js"></script>
+    <script src="/script/script.js"></script>
 </body>
 </html>
