--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax BackGrounds</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
     <div id="container">
@@ -15,6 +15,6 @@
     </div>
 
 
-    <script src="script/script.js"></script>
+    <script src="/script/script.js"></script>
 </body>
 </html>
